--- a/usercard.html
+++ b/usercard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Card</title>
-    <link rel="stylesheet" href="/usercard2/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 <div class="container">
@@ -29,11 +29,11 @@
         </div>
         <div class="footer">
             <div class="nav">
-                <div class="button1">
-                    <img src="https://cdn-icons-png.flaticon.com/512/174/174848.png" alt="facebookbut">
+                <div class="button">
+                    <a href="https://www.facebook.com"><img src="https://cdn-icons-png.flaticon.com/512/174/174848.png" width="50px" height="50px" alt="facebookbut"></a>
                 </div>
-                <div class="button2"><img src="https://cdn-icons.flaticon.com/png/512/3536/premium/3536424.png?token=exp=1643663676~hmac=47e7433e1d6758fbc431db4e940c6bec" alt="twitter"></div>
-                <div class="button3"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="inst"></div>
+                <div class="button"><a href="twitter.com"><img src="https://cdn-icons.flaticon.com/png/512/3256/premium/3256013.png?token=exp=1643733215~hmac=c3a3946827ce5214d94e30772307cb16" width="50px" height="50px" alt="twitter"></a></div>
+                <div class="button"> <a href="http://instagram.com"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="50px" height="50px" alt="inst"></a></div>
             </div>
         </div>
     </div>
