--- a/usercard.html
+++ b/usercard.html
@@ -30,10 +30,10 @@
         <div class="footer">
             <div class="nav">
                 <div class="button">
-                    <a href="https://www.facebook.com"><img src="https://cdn-icons-png.flaticon.com/512/174/174848.png" width="50px" height="50px" alt="facebookbut"></a>
+                    <a href="https://www.facebook.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174848.png" width="50px" height="50px" alt="facebookbut"></a>
                 </div>
-                <div class="button"><a href="twitter.com"><img src="https://cdn-icons.flaticon.com/png/512/3256/premium/3256013.png?token=exp=1643733215~hmac=c3a3946827ce5214d94e30772307cb16" width="50px" height="50px" alt="twitter"></a></div>
-                <div class="button"> <a href="http://instagram.com"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="50px" height="50px" alt="inst"></a></div>
+                <div class="button"><a href="https://www.twitter.com" target="_blank"><img src="https://cdn-icons.flaticon.com/png/512/3256/premium/3256013.png?token=exp=1643733215~hmac=c3a3946827ce5214d94e30772307cb16" width="50px" height="50px" alt="twitter"></a></div>
+                <div class="button"> <a href="http://instagram.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="50px" height="50px" alt="inst"></a></div>
             </div>
         </div>
     </div>
